--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=baskerville');
+
 :root {
     --primary: #808882;
     --secondary: #fdf6f6;
     --tercero: #FEFFFF;
     --cuarto: #867273;
     --quinto: #858b85;
+}
+
+body {
+  font-family: baskerville;
 }
 
 .btnCotizar{
@@ -100,7 +106,15 @@
 /* EMPLEADO */
 
 .emp_ban {
-    background-image: linear-gradient(180deg, #f7ebeb, #FFFFFF);
+    text-align: left; 
+    font-family: baskerville Black; 
+    font-weight: bold; font-size: 30px; 
+    background: #202020; 
+    -webkit-background-clip: text; 
+    -moz-background-clip: text; 
+    background-clip: text; 
+    color: transparent; 
+    text-shadow: 0px 3px 3px #8E9B91,0px -1px 1px #5d665f;
 }
 
 .emp_button_plus {
